--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "1.3"
+version = "1.3.2"
 group = "com.moremod"
 archivesBaseName = "rsring"
 
@@ -62,6 +62,9 @@ processResources {
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
+
+    // 设置资源处理的编码为UTF-8
+    filteringCharset = 'UTF-8'
 }
 
 jar {
